--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href="location.html">Location</a></li>
+					<li><a href="location.html">location</a></li>
 				</ul>
 
 			</div><!--/.nav-collapse -->
