--- a/location.html
+++ b/location.html
@@ -42,7 +42,7 @@
 				<ul class="nav navbar-nav">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href=Location.html>Location</a><li>
+					<li><a href=location.html>location</a><li>
 				</ul>
 
 			</div><!--/.nav-collapse -->
