--- a/location.html
+++ b/location.html
@@ -40,7 +40,7 @@
 			<div class="navbar-collapse collapse">
 
 				<ul class="nav navbar-nav">
-					<li><a href="index.html">Home</a></li>
+					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href=location.html>location</a><li>
 				</ul>
