--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 			<article class="col-sm-8 maincontent">
 				<p>.</p>
 				<p><img src="https://www.wellesleynatickveterinaryhospital.com/images/our-community.jpg" alt="" class="" width="100%" ></p>
-				<h3>The Animal Shelter is a nonprofit startup that is fully didicated to helping animals! we hope to give everyone a chance to help out wheather it's giving time, money, shelter, or even food! you'll sure make a difference.</h3>
+				<h3>The Animal Shelter is a nonprofit startup that is fully dedicated to helping animals! we hope to give everyone a chance to help out eather it's giving time, money, shelter, or even food! you'll sure make a difference.</h3>
 			</article>
 			<!-- /Article -->
 
